syntax = "proto3";

package pos_protobuf;

import "pos/include/proto/handle.proto";

/*!
 *  \brief  binary format of POSHandle_CUDA_Stream
 */
 message Bin_POSHandle_CUDA_Stream {
    Bin_POSHandle base = 1;
}
